# web-agroet

./: .gitignore  README.md  app_functions.py  app_translation.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: keep_alive.yml  keep_awake.yml
model/: ml_et24.cbm
scripts/: keep_awake.py
src/web_agroet/: main.py
src/web_agroet/et/: et0_landsat.py  et_ml_predict.py
src/web_agroet/geeet/: MOST.py  __init__.py  meteo.py  ptjpl.py  resistances.py  solar.py  tseb.py  vegetation.py
src/web_agroet/geeet/eepredefined/: __init__.py  cmd_utils.py  join.py  landsat.py  metprep.py
src/web_agroet/landsat/: calculation.py  interpolation.py  reproject.py
src/web_agroet/meteo/: download_era5land.py  meteo_utils.py
src/web_agroet/utils/: gee.py  time.py
