[project]
name = "web-agroet"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei Dobrokhotov",email = "dobralexey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "earthengine-api (>=1.7.20,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "pyet (>=1.4.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "timezonefinder (>=8.2.2,<9.0.0)",
    "geemap (>=0.37.2,<0.38.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "spyndex (>=0.10.0,<0.11.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "rioxarray (>=0.22.0,<0.23.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "streamlit-folium (>=0.27.1,<0.28.0)",
    "streamlit-file-browser (>=3.2.22,<4.0.0)"
]

[tool.poetry]
packages = [{include = "web_agroet", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
